<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="380dp"
        android:layout_height="53dp"
        android:layout_row="1"
        android:layout_column="0"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="90dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="380dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="152dp" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:text="@string/log_in"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="401dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="447dp" />

</TableLayout>